-Comments no longer are injecting themselves behind their users inside a thread. Used a Query in comments repository "SELECT * FROM redwood_blog_db.comments c WHERE c.post_id = ?1 ORDER BY c.id DESC"

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -90,7 +90,7 @@ textarea, input {
     margin-left: 20px;
     margin-right: 20px;
     /*overflow: auto;*/
-    height:50px;
+    height:200px;
     min-height:50px;
     overflow:hidden;
     /*margin-bottom: 155px;*/
@@ -117,7 +117,7 @@ textarea, input {
     text-align: center;
 }
 
-#showPageContent {
+#showPageWrapper {
     margin-left: 20px;
 }
 
@@ -125,6 +125,13 @@ textarea, input {
     overflow: hidden;
 }
 #profileContent {
+
+}
+
+/*================= COMMENTS =====================*/
+
+.comment-section-wrapper {
+
 
 }
 
